# trading-bot

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  SPEC.md  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
config/: exchange_example.yaml  params.yaml
core/: decision.py  execution.py  market_data.py  signals.py
ensemble/: voting.py
evolution/: fitness.py  genetics.py  population.py
monitoring/: logger.py
paper/: simulator.py
storage/: database.py
tests/: mock_db.py  test_decision.py  test_fitness.py  test_genetics.py  test_logger.py  test_main.py  test_maker.py  test_market_data.py  test_population.py  test_signals.py  test_simulator.py  test_voting.py
